@@ -1,3 +1,7 @@
+2008-03-30  Luis Lavena  <luislavena@gmail.com>
+
+	* test/test_gem.rb: Leave APPLE_GEM_HOME tests only to *nixes.
+
 2008-03-29  Eric Hodel  <drbrain@segment7.net>
 
 	* gemspecs/:  Removed.
